--- a/haskell-aoc2023/package.yaml
+++ b/haskell-aoc2023/package.yaml
@@ -21,6 +21,13 @@ description:         Please see the README on GitHub at <https://github.com/gith
 
 dependencies:
 - base >= 4.7 && < 5
+- containers
+- extra
+- hashable
+- range
+- split
+- text
+- unordered-containers
 
 ghc-options:
 - -Wall
